--- a/components/style.scss
+++ b/components/style.scss
@@ -68,6 +68,7 @@
 @forward "03-organisms/site/site-header/site-header";
 @forward "03-organisms/hero/hero";
 @forward "03-organisms/service/service";
+@forward "03-organisms/ouragentcomp/ouragentcomp";
 
 
 
