As-03-16/08/2024- Completed all organisms except contact page.

--- a/components/01-atoms/heading4/heading4.twig
+++ b/components/01-atoms/heading4/heading4.twig
@@ -1,1 +1,1 @@
-<h4 class="heading4 {{modifier_class}}">{{heading4_content}}</h4>
+<h4 class="heading4 {{modifier_class}}"><a href="{{h4_url}} class="stretched-link">{{h4_acontent}}</a> {{heading4_content}}</h4>
