--- a/components/01-atoms/span/span.twig
+++ b/components/01-atoms/span/span.twig
@@ -1,1 +1,1 @@
-<span class="span">{{span_content}}</span>
+<span class="span counter {{modifier_class}}" data-target="{{datatarget}}">{{span_content}}</span>
