--- a/components/style.scss
+++ b/components/style.scss
@@ -32,7 +32,8 @@
 @forward "01-atoms/heading3/heading3";
 @forward "01-atoms/heading4/heading4";
 @forward "01-atoms/booticons/booticons";
-@forward "01-atoms/span/span";
+@forward "01-atoms/list/list";
+@forward "01-atoms/divc/divc";
 
 
 
@@ -58,6 +59,18 @@
 @forward "02-molecules/cardcopy/cardcopy";
 @forward "02-molecules/section/section";
 @forward "02-molecules/ouragent/ouragent";
+@forward "02-molecules/testimonialcard/testimonialcard";
+@forward "02-molecules/serviceslist/serviceslist";
+@forward "02-molecules/download/download";
+@forward "02-molecules/services2/services2";
+@forward "02-molecules/statscard/statscard";
+@forward "02-molecules/propertiescard/propertiescard";
+@forward "02-molecules/property/property";
+@forward "02-molecules/propertydetailsdiv/propertydetailsdiv";
+@forward "02-molecules/propertydetails/propertydetails";
+@forward "02-molecules/propertysummry/propertysummry";
+@forward "02-molecules/contactsocial/contactsocial";
+
 
 
 
@@ -69,6 +82,13 @@
 @forward "03-organisms/hero/hero";
 @forward "03-organisms/service/service";
 @forward "03-organisms/ouragentcomp/ouragentcomp";
+@forward "03-organisms/testimonial/testimonial";
+@forward "03-organisms/servicedetails/servicedetails";
+@forward "03-organisms/whowe/whowe";
+@forward "03-organisms/stats/stats";
+@forward "03-organisms/aboutfeatures/aboutfeatures";
+@forward "03-organisms/properties/properties";
+@forward "03-organisms/propertysingle/propertysingle";
 
 
 
