--- a/components/01-atoms/booticons/_booticons.scss
+++ b/components/01-atoms/booticons/_booticons.scss
@@ -12,3 +12,11 @@
     font-size: 28px;
     transition: ease-in-out 0.3s;
 }
+.booticons--1{
+    color: #ffc107;
+    background: none;
+    margin: 0 1px;
+    font-size: initial;
+    margin-bottom: 0;
+    display: inline;
+}
