--- a/components/01-atoms/heading3/heading3.twig
+++ b/components/01-atoms/heading3/heading3.twig
@@ -1,1 +1,1 @@
-<h3 class="heading3 {{modifier_class}}"><a href="{{heading3_url}}" class="heading3 {{modifier_class}}">{{heading3_url_content}}</a>{{heading3_content}}</h3>
+<h3 class="heading3 {{modifier_class}}"><a href="{{heading3_url}}" class="heading3 {{modifier__class}}">{{heading3_url_content}}</a>{{heading3_content}}</h3>
