--- a/components/01-atoms/image/_image.scss
+++ b/components/01-atoms/image/_image.scss
@@ -19,3 +19,9 @@
     max-width: 100%;
     height: 100%;
 }
+.image--3{
+    // width: 90px;
+    // border-radius: 50%;
+    // border: 4px solid #ffffff;
+    // margin: 0 auto;
+}
