--- a/components/01-atoms/paragraph/_paragraph.scss
+++ b/components/01-atoms/paragraph/_paragraph.scss
@@ -9,6 +9,11 @@
     margin-top: 0;
     margin-bottom: 1rem;
 }
+.paragraph--test{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    color: #444444;
+}
 .paragraph--card{
     line-height: 24px;
     font-size: 14px;
