--- a/components/02-molecules/statscard/statscard.twig
+++ b/components/02-molecules/statscard/statscard.twig
@@ -6,6 +6,7 @@
 <div class="d-flex flex-column">
 					{% include "@atoms/divc/divc.twig" with {
                     datadiv: statstarget,
+                    modifier_class: "text-dark"
               } %}
 					{% include "@atoms/paragraph/paragraph.twig" with {
                 para_content: statspara,
