--- a/components/style.scss
+++ b/components/style.scss
@@ -34,6 +34,8 @@
 @forward "01-atoms/booticons/booticons";
 @forward "01-atoms/list/list";
 @forward "01-atoms/divc/divc";
+@forward "01-atoms/input/input";
+@forward "01-atoms/button/button";
 
 
 
@@ -70,6 +72,7 @@
 @forward "02-molecules/propertydetails/propertydetails";
 @forward "02-molecules/propertysummry/propertysummry";
 @forward "02-molecules/contactsocial/contactsocial";
+@forward "02-molecules/contactform/contactform";
 
 
 
@@ -89,6 +92,7 @@
 @forward "03-organisms/aboutfeatures/aboutfeatures";
 @forward "03-organisms/properties/properties";
 @forward "03-organisms/propertysingle/propertysingle";
+@forward "03-organisms/contact/contact";
 
 
 
