--- a/components/02-molecules/contactsocial/contactsocial.twig
+++ b/components/02-molecules/contactsocial/contactsocial.twig
@@ -1,28 +1,19 @@
 <div class="col-lg-4">
-            <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+{% for item in contactsocialitems %}
+  
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               {% include "@atoms/booticons/booticons.twig" with {
-                booticon: contactsocialicon,
+                booticon: item.contactsocialicon,
               } %}
               <div>
-                <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                {% include "@atoms/heading3/heading3.twig" with {
+                heading3_content: item.contactsocialh3,
+              } %}
+                {% include "@atoms/paragraph/paragraph.twig" with {
+                para_content: item.contactsocialpara,
+              } %}
               </div>
             </div><!-- End Info Item -->
-
-            <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>Email Us</h3>
-                <p>info@example.com</p>
-              </div>
-            </div><!-- End Info Item -->
+{% endfor %}
 
           </div>
