--- a/components/02-molecules/have/have.twig
+++ b/components/02-molecules/have/have.twig
@@ -7,6 +7,7 @@
 {% include "@atoms/paragraph/paragraph.twig" with {
     biclass: havebiclass0,
     para_content: havepara,
+    modifier_class: "text-light"
 } %}
 {% include "@atoms/paragraph/paragraph.twig" with {
     biclass:  havebiclass,
