--- a/components/02-molecules/propertydetailsdiv/propertydetailsdiv.twig
+++ b/components/02-molecules/propertydetailsdiv/propertydetailsdiv.twig
@@ -1,7 +1,7 @@
 <div class="testimoniaitem">
 	{% include "@atoms/paragraph/paragraph.twig" with {
             para_content: propertydetailsdivspan,
-            modifier_class: "text-start"
+            modifier_class: "text-start paragraph--test",
         } %}
 	<div class="text-start">
 		{% include "@atoms/image/image.twig" with {
