--- a/components/03-organisms/whowe/whowe.twig
+++ b/components/03-organisms/whowe/whowe.twig
@@ -37,7 +37,7 @@
 							<div class="col-lg-12 d-flex flex-column gap-3">
 								{% for item in whoweitems %}
 	{% include "@atoms/image/image.twig" with {
-    image_src: item.whoweimg,
+    image_src: item.whoweimg1,
 } %}
 {% endfor %}
 							</div>
